[metadata]
name = azimuth_schedule_operator
summary = Kubernetes operator for creating and deleting Azimuth platforms
description-file =
    README.md
author = John Garbutt
author-email = johng@stackhpc.com
url = https://github.com/stackhpc/azimuth-schedule-operator
python-requires = >=3.9

[files]
packages =
    azimuth_schedule_operator
